--- a/lectures/L02-tools.ipynb
+++ b/lectures/L02-tools.ipynb
@@ -43,14 +43,9 @@
     "\n",
     "My office hours will be: \n",
     "\n",
-    "- When: Monday to Friday 11 AM - 12 PM.\n",
-    "- Where: Zoom / SSB 393.\n",
-    "- How to sign in: https://calendly.com/umbertomig/office-hours\n",
-    "\n",
-    "TA: Joyce Hu\n",
-    "\n",
-    "- Email: joh011@ucsd.edu\n",
-    "- OH Sign-in: https://calendly.com/joh011-ucsd/css1-officehours"
+    "- When: Thursday 3-5pm.\n",
+    "- Where: Zoom / SSB 342.\n",
+    "- How to sign in: https://calendly.com/acroman/office-hours\n",
    ]
   },
   {
