remove repeat add functions

--- a/lectures/L02-tools.ipynb
+++ b/lectures/L02-tools.ipynb
@@ -425,10 +425,7 @@
         "id": "d643a0fb"
       },
       "source": [
-        "### Additional functions\n",
-        "\n",
-        "- Code cells have a really useful **auto-complete function**.  \n",
-        "- As you're typing code, press the `tab` key, and a menu will appear showing possible functions/variables you might be referencing.  "
+        "### Additional functions"
       ]
     },
     {
