vocareum submission instructions

--- a/labs/Lab01.ipynb
+++ b/labs/Lab01.ipynb
@@ -715,9 +715,12 @@
         "\n",
         "Once you've completed all the cells above (saving regularly):\n",
         "\n",
-        "- Click \"Validate\". This will run a check to determine whether you've passed all visible tests.\n",
-        "- Once you've validated the assignment, you should now have an option to \"Submit\" the assignment (next to where the assignment is stored in your directory). Click this.\n",
-        "- This will now show up under your \"Submitted Assignments\" section.\n",
+        "- You will need to save your file on Google Drive\n",
+        "- Go to Canvas, to the Vocareum tab\n",
+        "- Select the appropriate assignment on Vocareum\n",
+        "- Submit your completed assignment\n",
+        "- Click \"Validate\"; Vocareum will tell you if you passed the public tests\n",
+        "- Submit your assignment on Vocareum\n",
         "\n",
         "If you have any trouble accessing or submitting the assignment, please check in with your TA!"
       ]
