--- a/lectures/L04-basics-syntax.ipynb
+++ b/lectures/L04-basics-syntax.ipynb
@@ -105,21 +105,9 @@
       "execution_count": null,
       "id": "329bba79",
       "metadata": {
-        "id": "329bba79",
-        "outputId": "1d4d7f81-d7dc-45e9-f09d-ea738f633878"
+        "id": "329bba79"
       },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "2"
-            ]
-          },
-          "execution_count": 2,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "### Addition operator\n",
         "1 + 1"
@@ -152,21 +140,9 @@
       "execution_count": null,
       "id": "63af4866",
       "metadata": {
-        "id": "63af4866",
-        "outputId": "18c0b2d5-96ee-44cf-f87d-6ab347eb0c1a"
+        "id": "63af4866"
       },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "8"
-            ]
-          },
-          "execution_count": 3,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "### Exponentiation\n",
         "2 ** 3"
@@ -177,21 +153,9 @@
       "execution_count": null,
       "id": "f4805a7b",
       "metadata": {
-        "id": "f4805a7b",
-        "outputId": "b4088f79-b9ea-4654-92c2-470b770062f9"
+        "id": "f4805a7b"
       },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "0.5"
-            ]
-          },
-          "execution_count": 4,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "### Division\n",
         "2 / 4"
@@ -202,21 +166,9 @@
       "execution_count": null,
       "id": "a379f066",
       "metadata": {
-        "id": "a379f066",
-        "outputId": "46312de5-2d43-494a-9f88-d72cd931ff5e"
+        "id": "a379f066"
       },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "2"
-            ]
-          },
-          "execution_count": 5,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "### Modulus\n",
         "8 % 3"
@@ -312,21 +264,9 @@
       "execution_count": null,
       "id": "2cf2264a",
       "metadata": {
-        "id": "2cf2264a",
-        "outputId": "2fbaea7f-fb31-4177-b79c-ea94bff99e1c"
+        "id": "2cf2264a"
       },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "'apple'"
-            ]
-          },
-          "execution_count": 8,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "### Addition \"concatenates\" strings\n",
         "\"a\" + \"pple\""
@@ -348,7 +288,7 @@
         "| Operation | Symbol | Example |\n",
         "| --------- | ------ | ------- |\n",
         "| Add to variable | `+=` | `x += 1`|\n",
-        "| Subtract from | `+=` | `x -= 1`|\n",
+        "| Subtract from | `-=` | `x -= 1`|\n",
         "\n",
         "\n",
         "These are equivalent to just writing out something like: `x = x + 1` or `x = x - 1`."
@@ -359,21 +299,9 @@
       "execution_count": null,
       "id": "38245517",
       "metadata": {
-        "id": "38245517",
-        "outputId": "4056a8de-234f-448f-99f6-79a69b907f70"
+        "id": "38245517"
       },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "11"
-            ]
-          },
-          "execution_count": 9,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "x = 10\n",
         "x += 1\n",
@@ -403,21 +331,9 @@
       "execution_count": null,
       "id": "6f7e6d69",
       "metadata": {
-        "id": "6f7e6d69",
-        "outputId": "885eec53-9e5e-4fcb-fd0d-0981849a05ad"
+        "id": "6f7e6d69"
       },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "False"
-            ]
-          },
-          "execution_count": 10,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "True and False"
       ]
@@ -427,21 +343,9 @@
       "execution_count": null,
       "id": "d7dcfd4c",
       "metadata": {
-        "id": "d7dcfd4c",
-        "outputId": "87a63b36-831a-4de4-fd74-e14e9786ff2f"
+        "id": "d7dcfd4c"
       },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "True"
-            ]
-          },
-          "execution_count": 11,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "True or False"
       ]
@@ -451,21 +355,9 @@
       "execution_count": null,
       "id": "4061c7ae",
       "metadata": {
-        "id": "4061c7ae",
-        "outputId": "453ea95b-1937-42b7-c4ae-a2175746232a"
+        "id": "4061c7ae"
       },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "True"
-            ]
-          },
-          "execution_count": 12,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "True and (not False)"
       ]
@@ -496,21 +388,9 @@
       "execution_count": null,
       "id": "0566bcd2",
       "metadata": {
-        "id": "0566bcd2",
-        "outputId": "490ceaf6-7742-4cdb-a3b1-2c1a94cdef09"
+        "id": "0566bcd2"
       },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "True"
-            ]
-          },
-          "execution_count": 13,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "## Equal operator\n",
         "2 == (1 + 1)"
@@ -521,21 +401,9 @@
       "execution_count": null,
       "id": "54028210",
       "metadata": {
-        "id": "54028210",
-        "outputId": "73718356-a289-4101-9332-05af22cc3661"
+        "id": "54028210"
       },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "False"
-            ]
-          },
-          "execution_count": 14,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "## Greater than\n",
         "2 > (1 + 1)"
@@ -561,21 +429,9 @@
       "execution_count": null,
       "id": "36ad3dd4",
       "metadata": {
-        "id": "36ad3dd4",
-        "outputId": "4f9d82ce-de8c-4282-dd5f-554ff452dd80"
+        "id": "36ad3dd4"
       },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "True"
-            ]
-          },
-          "execution_count": 15,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "## Are these strings equal?\n",
         "\"test\" == \"test\""
@@ -586,21 +442,9 @@
       "execution_count": null,
       "id": "f216659f",
       "metadata": {
-        "id": "f216659f",
-        "outputId": "5a8cd9a4-d94b-4a31-c277-ecd35312f6a3"
+        "id": "f216659f"
       },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "True"
-            ]
-          },
-          "execution_count": 16,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "## Is b \"larger\" than a?\n",
         "\"b\" > \"a\""
@@ -611,21 +455,9 @@
       "execution_count": null,
       "id": "247c8ca0",
       "metadata": {
-        "id": "247c8ca0",
-        "outputId": "3047e7d9-bba6-4bd7-f3fc-3163752cb55d"
+        "id": "247c8ca0"
       },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "True"
-            ]
-          },
-          "execution_count": 17,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "## Is ab \"larger\" than aa?\n",
         "\"ab\" > \"aa\""
@@ -688,19 +520,9 @@
       "execution_count": null,
       "id": "ee3a68a8",
       "metadata": {
-        "id": "ee3a68a8",
-        "outputId": "7ae3499c-38fa-47dc-b785-4352ce621360"
+        "id": "ee3a68a8"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "True\n",
-            "False\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# Comparing equality vs. identity\n",
         "a = \"This is a fairly long string\"\n",
@@ -728,21 +550,9 @@
       "execution_count": null,
       "id": "aac27435",
       "metadata": {
-        "id": "aac27435",
-        "outputId": "95b196ba-1b30-425e-9ef8-1ab4900dacb8"
+        "id": "aac27435"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "140579923866832\n",
-            "140579923867152\n",
-            "True\n",
-            "False\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "x = 1000\n",
         "y = 1000\n",
@@ -770,19 +580,10 @@
       "execution_count": null,
       "id": "83053885",
       "metadata": {
-        "id": "83053885",
-        "outputId": "e1533095-0896-40cc-d9e8-31ec01d2be0e"
+        "collapsed": true,
+        "id": "83053885"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "True\n",
-            "True\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "x = 1\n",
         "y = 1\n",
@@ -816,19 +617,9 @@
       "execution_count": null,
       "id": "8cc6a47a",
       "metadata": {
-        "id": "8cc6a47a",
-        "outputId": "f0b44747-42bb-453f-a873-9b38a2b5aa58"
+        "id": "8cc6a47a"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "True\n",
-            "False\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "print(\"a\" in \"apple\")\n",
         "print(\"b\" in \"apple\")"
@@ -840,19 +631,9 @@
       "id": "2e6cf962",
       "metadata": {
         "scrolled": true,
-        "id": "2e6cf962",
-        "outputId": "297a7a23-8e72-49ff-cb58-f1157ab58085"
+        "id": "2e6cf962"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "False\n",
-            "True\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "print(\"a\" not in \"apple\")\n",
         "print(\"b\" not in \"apple\")"
@@ -879,19 +660,9 @@
       "execution_count": null,
       "id": "9e052183",
       "metadata": {
-        "id": "9e052183",
-        "outputId": "3477a76a-9196-439b-dc7e-d69117e69343"
+        "id": "9e052183"
       },
-      "outputs": [
-        {
-          "ename": "IndentationError",
-          "evalue": "unexpected indent (2064551885.py, line 2)",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"/var/folders/57/5cl1vf6549d34n3t9xpfz0fr0000gn/T/ipykernel_90192/2064551885.py\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    print(\"Don't indent here\")\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "## We shouldn't have indented here\n",
         "    print(\"Don't indent here\")"
