--- a/lectures/L06-loops.ipynb
+++ b/lectures/L06-loops.ipynb
@@ -9,6 +9,11 @@
         "- Problem Set 01 will be online today! It is due in two weeks.\n",
         "- Next week we will go over DataHub; how to get your working files and submit assignments on there.\n",
         "- Forget I ever said anything about Vocareum -- it requires more system integration and we will not get involved with that.\n",
+        "\n",
+        "- Lecture this coming Monday is on Zoom!\n",
+        "- Labs will be in person.\n",
+        "\n",
+        "\n",
         "- Any questions?\n"
       ],
       "metadata": {
